# WindowsAgentArena

./: .gitignore  README_src.md  pyproject.toml
scripts/: build-container-image.sh  run-local.sh  shared.sh
src/win-arena-container/client/: run.py
